--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-# files that I want, on my side, but don't need online
+# build output
+dist/
 
-CSS_My_Site_End_Results.pdf
-StubCode.html
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
+
+# IDE:
+.idea/
+.vscode/
