--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "astro": "^5.3.0",
     "astro-icon": "^1.1.5",
     "autoprefixer": "^10.4.20",
+    "lodash": "^4.17.21",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
+    "@types/lodash": "^4.17.15",
     "daisyui": "^5.0.0-beta.8"
   }
 }
